@@ -12,17 +12,17 @@ Build-Depends: autoconf (>= 2.62),
                debhelper (>= 9),
                dh-autoreconf,
                dpkg-dev (>= 1.15.1),
-               libgstreamer1.0-dev (>= 0.11.91),
+               libgstreamer1.0-dev (>= 0.11.92),
                gstreamer1.0-doc,
                gstreamer1.0-plugins-base,
                gstreamer1.0-plugins-base-doc,
-               gstreamer1.0-tools (>= 0.11.91),
+               gstreamer1.0-tools (>= 0.11.92),
                gtk-doc-tools,
                liba52-0.7.4-dev,
                libcdio-dev (>= 0.76),
                libdvdread-dev (>= 0.9.0),
                libglib2.0-dev (>= 2.31.14),
-               libgstreamer-plugins-base1.0-dev (>= 0.11.91),
+               libgstreamer-plugins-base1.0-dev (>= 0.11.92),
                libmad0-dev (>= 0.15),
                libmp3lame-dev,
                libmpeg2-4-dev (>= 0.4.0),
